--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=8888
 spring.application.name=spring-cloud-server
+
+spring.cloud.config.server.git.uri=https://github.com/the-dusky-husky/cloud-config-server.git
