--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 server.port=8888
 spring.application.name=spring-cloud-server
-
-spring.cloud.config.server.git.uri=https://github.com/the-dusky-husky/husky.git
+spring.cloud.config.server.git.uri=https://github.com/the-dusky-husky/properties
