--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-server.port=8888
+server.port=7000
 spring.application.name=spring-cloud-server
 spring.cloud.config.server.git.uri=https://github.com/the-dusky-husky/properties
+server.tomcat.accesslog.enabled=true
+spring.cloud.config.server.git.refreshRate=10
